k3s_cluster/base/private/code/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-webui
spec:
  type: ClusterIP
  selector:
    app: private-code-webui
  ports:
    - name: web
      protocol: TCP
      port: 4434
      targetPort: 8080
