k3s_cluster/base/private/code/webui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-webui
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`webui.code.private.home`)
      middlewares:
        - name: private-middleware-auth-authentik
      services:
        - name: private-code-webui-service
          port: 4434
  # tls: {}
